2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* server.c (DEBUG): Print the caller's thread id.
	(server_loop): When using DEBUG, don't include the caller's thread
	id.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* thread.c (thread_init): Update use of
	hurd_ihash_init_with_buffer to be consistent with new API.
	* object.c (object_init): Likewise.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* output-serial.c (serial_init): Rewrite command-line parser to
	not use strtok.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* as.c (do_index): New function.
	(as_build_internal): Don't index a page table directly.  Instead,
	use the above new function.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_build_internal): Improve comments.  Do some variable
	renaming.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_build_internal): When addressing capability pages, use
	the thread's address space, not AS_ROOT_ADDR.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* object.c (folio_free): Synchronize the in-memory descriptor with
	the on-disk data.
	(folio_object_alloc): Likewise.

2008-02-05  Neal H. Walfield  <neal@gnu.org>

	* thread.h (struct wait_queue_node): Remove structure.
	(struct thread): Add field wait_queue_p.  Make the wait queue next
	and previous pointers oid_t's and not struct cap's.  Update users.
	* object.h (object_oid): New function.
	* as.c (as_build_internal): Don't access a folio's fields
	directly; use the accessor functions.
	* cap.c (cap_shootdown): Likewise.
	* cap-lookup.c (lookup): Likewise.
	* object.c (memory_object_destroy): Likewise.
	(object_find): Likewise.
	(folio_free): Likewise.
	(folio_object_alloc): Likewise.
	(object_wait_queue): Remove function.
	(object_wait_queue_head): Don't access a folio's fields directly;
	use the accessor functions.  Update implementation to reflect
	struct thread changes.
	(object_wait_queue_tail): Likewise.
	(object_wait_queue_next): Likewise.
	(object_wait_queue_prev): Likewise.